<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
      <groupId>org.jboss</groupId>
      <artifactId>jboss-parent</artifactId>
      <version>14</version>
   </parent>
   <groupId>org.jboss.forge.addon</groupId>
   <artifactId>angularjs</artifactId>
   <version>2.0.0.Final</version>
   <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <maven.compiler.source>1.7</maven.compiler.source>
      <maven.compiler.target>1.7</maven.compiler.target>
      <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>

      <version.forge.descriptors>0.0.4.Final</version.forge.descriptors>
      <version.furnace>2.6.0.Final</version.furnace>
      <version.metawidget>2.4</version.metawidget>
      <version.shrinkwrap.resolvers>2.1.0</version.shrinkwrap.resolvers>

      <!-- Build Info -->
      <forge.angularjs.scm.connection>scm:git:git://github.com/forge/angularjs-addon.git</forge.angularjs.scm.connection>
      <forge.angularjs.developer.connection>scm:git:git@github.com:forge/angularjs-addon.git</forge.angularjs.developer.connection>
      <forge.angularjs.scm.url>http://github.com/forge/angularjs-addon</forge.angularjs.scm.url>
   </properties>
   <dependencyManagement>
      <dependencies>
         <dependency>
            <groupId>org.jboss.forge</groupId>
            <artifactId>forge-bom</artifactId>
            <version>${version.furnace}</version>
            <type>pom</type>
            <scope>import</scope>
         </dependency>
      </dependencies>
   </dependencyManagement>
   <dependencies>
      <dependency>
         <groupId>org.jboss.forge.addon</groupId>
         <artifactId>scaffold-spi</artifactId>
         <classifier>forge-addon</classifier>
         <scope>provided</scope>
      </dependency>
      <!-- Needs to be included in the POM to prevent InteliJ IDEA from throwing an error in making the project -->
      <dependency>
         <groupId>org.jboss.forge.descriptors</groupId>
         <artifactId>javaee-descriptors</artifactId>
         <version>${version.forge.descriptors}</version>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>org.jboss.forge.addon</groupId>
         <artifactId>javaee</artifactId>
         <classifier>forge-addon</classifier>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>org.jboss.forge.addon</groupId>
         <artifactId>templates</artifactId>
         <classifier>forge-addon</classifier>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>org.jboss.forge.addon</groupId>
         <artifactId>text</artifactId>
         <classifier>forge-addon</classifier>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>org.jboss.forge.addon</groupId>
         <artifactId>convert</artifactId>
         <classifier>forge-addon</classifier>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>org.jboss.forge.addon</groupId>
         <artifactId>parser-java</artifactId>
         <classifier>forge-addon</classifier>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>org.jboss.forge.furnace.container</groupId>
         <artifactId>cdi</artifactId>
         <classifier>forge-addon</classifier>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>org.jboss.forge.addon</groupId>
         <artifactId>maven</artifactId>
         <classifier>forge-addon</classifier>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.jboss.shrinkwrap.resolver</groupId>
         <artifactId>shrinkwrap-resolver-depchain</artifactId>
         <version>${version.shrinkwrap.resolvers}</version>
         <scope>test</scope>
         <type>pom</type>
      </dependency>
      <dependency>
         <groupId>org.jboss.forge.furnace.test</groupId>
         <artifactId>furnace-test-harness</artifactId>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.jboss.forge.furnace.test</groupId>
         <artifactId>arquillian-furnace-classpath</artifactId>
         <scope>test</scope>
      </dependency>
   </dependencies>
   <build>
      <plugins>
         <plugin>
            <groupId>org.jboss.forge.furnace</groupId>
            <artifactId>furnace-maven-plugin</artifactId>
            <version>${version.furnace}</version>
            <executions>
               <execution>
                  <id>generate-dot</id>
                  <phase>prepare-package</phase>
                  <goals>
                     <goal>generate-dot</goal>
                  </goals>
                  <configuration>
                     <attach>true</attach>
                  </configuration>
               </execution>
            </executions>
         </plugin>
         <plugin>
            <artifactId>maven-jar-plugin</artifactId>
            <executions>
               <execution>
                  <id>create-forge-addon</id>
                  <phase>package</phase>
                  <goals>
                     <goal>jar</goal>
                  </goals>
                  <configuration>
                     <classifier>forge-addon</classifier>
                  </configuration>
               </execution>
            </executions>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
               <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=160m</argLine>
            </configuration>
         </plugin>
      </plugins>
   </build>

   <scm>
      <connection>${forge.angularjs.scm.connection}</connection>
      <developerConnection>${forge.angularjs.developer.connection}</developerConnection>
      <url>${forge.angularjs.scm.url}</url>
      <tag>2.0.0.Final</tag>
   </scm>
</project>
